{
  "version": 4,
  "terraform_version": "0.14.7",
  "serial": 74,
  "lineage": "81e646b4-28f7-e13d-9d0a-3a3e9cf12405",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0cabd73f49f72d5ce",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-3-6-206-25.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.6.206.25",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.ig",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-073c8c0760395aab8",
            "arn": "arn:aws:ec2:ap-south-1:151551371461:instance/i-0c850c820e16a0d31",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c850c820e16a0d31",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "es",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-02a4e552b801bc087",
            "private_dns": "ip-10-0-10-250.ap-south-1.compute.internal",
            "private_ip": "10.0.10.250",
            "public_dns": "ec2-13-127-189-1.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.127.189.1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-09ad8ef068221ce51",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0dcf6c4accece0b52",
            "tags": {
              "Name": "Node"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-02a94fb8ac7427fd5"
            ]
          },
          "dependencies": [
            "aws_security_group.sg12",
            "aws_subnet.private_subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "master",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-073c8c0760395aab8",
            "arn": "arn:aws:ec2:ap-south-1:151551371461:instance/i-0398b827ab82bce08",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0398b827ab82bce08",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "es",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0df96a0e29163b600",
            "private_dns": "ip-10-0-1-18.ap-south-1.compute.internal",
            "private_ip": "10.0.1.18",
            "public_dns": "ec2-65-0-169-10.ap-south-1.compute.amazonaws.com",
            "public_ip": "65.0.169.10",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-066762fa3db33a3aa",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0794ce3887d262d33",
            "tags": {
              "Name": "master"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-02a94fb8ac7427fd5"
            ]
          },
          "dependencies": [
            "aws_security_group.sg12",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:151551371461:internet-gateway/igw-0ae2e2abbb4078f19",
            "id": "igw-0ae2e2abbb4078f19",
            "owner_id": "151551371461",
            "tags": {
              "Environment": "ELASTIC_SEARCH_CLUSTER",
              "Name": "ELASTIC_SEARCH_CLUSTER-igw"
            },
            "vpc_id": "vpc-06a95fdb1f09b82e6"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0cabd73f49f72d5ce",
            "id": "nat-02ea8930cf4239478",
            "network_interface_id": "eni-0f44dc9962115e7ca",
            "private_ip": "10.0.1.227",
            "public_ip": "3.6.206.25",
            "subnet_id": "subnet-0794ce3887d262d33",
            "tags": {
              "Environment": "ELASTIC_SEARCH_CLUSTER",
              "Name": "nat"
            }
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.ig",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0563a1eb9e54ba7161080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-02ea8930cf4239478",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0563a1eb9e54ba716",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": null,
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.ig",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0ae2e2abbb4078f19",
            "id": "r-rtb-024b7ec8fe6abc1051080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-024b7ec8fe6abc105",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": null,
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.ig",
            "aws_route_table.public",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0563a1eb9e54ba716",
            "owner_id": "151551371461",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "ELASTIC_SEARCH_CLUSTER",
              "Name": "ELASTIC_SEARCH_CLUSTER-private-route-table"
            },
            "vpc_id": "vpc-06a95fdb1f09b82e6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-024b7ec8fe6abc105",
            "owner_id": "151551371461",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ae2e2abbb4078f19",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "ELASTIC_SEARCH_CLUSTER",
              "Name": "ELASTIC_SEARCH_CLUSTER-public-route-table"
            },
            "vpc_id": "vpc-06a95fdb1f09b82e6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d2241808003bc06c",
            "route_table_id": "rtb-0563a1eb9e54ba716",
            "subnet_id": "subnet-0dcf6c4accece0b52"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private_subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03dd15e997b2e117f",
            "route_table_id": "rtb-024b7ec8fe6abc105",
            "subnet_id": "subnet-0794ce3887d262d33"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg12",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:151551371461:security-group/sg-02a94fb8ac7427fd5",
            "description": "Default security group to allow inbound/outbound from the VPC",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "id": "sg-02a94fb8ac7427fd5",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "sg12",
            "name_prefix": "",
            "owner_id": "151551371461",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "ELASTIC_SEARCH_CLUSTER"
            },
            "timeouts": null,
            "vpc_id": "vpc-06a95fdb1f09b82e6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:151551371461:subnet/subnet-0dcf6c4accece0b52",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.10.0/24",
            "id": "subnet-0dcf6c4accece0b52",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "151551371461",
            "tags": {
              "Environment": "ELASTIC_SEARCH_CLUSTER",
              "Name": "private-subnet"
            },
            "vpc_id": "vpc-06a95fdb1f09b82e6"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:151551371461:subnet/subnet-0794ce3887d262d33",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0794ce3887d262d33",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "151551371461",
            "tags": {
              "Environment": "ELASTIC_SEARCH_CLUSTER",
              "Name": "public-subnet"
            },
            "vpc_id": "vpc-06a95fdb1f09b82e6"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:151551371461:vpc/vpc-06a95fdb1f09b82e6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-074f8c23fbadbbd2e",
            "default_route_table_id": "rtb-0ac5d5555089a0b19",
            "default_security_group_id": "sg-0a94377cd41e37648",
            "dhcp_options_id": "dopt-94fb23ff",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-06a95fdb1f09b82e6",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0ac5d5555089a0b19",
            "owner_id": "151551371461",
            "tags": {
              "Environment": "ELASTIC_SEARCH_CLUSTER",
              "Name": "ELASTIC_SEARCH_CLUSTER-vpc"
            }
          }
        }
      ]
    }
  ]
}